(12/18/07)
*** r1214 made type specification illegal in a foreach but still recognised it
    and threw an error.  This commit removes recognition of that from the
    parser entirely (as was intended to eventually happen when r1214 was made)

*** Complete removal of "while" statements from the language.
    They do not seem to have a use, and haven't worked for some months
    due to their removal from the XML intermediate form.

(12/07/07)
*** Deprecated use of .dtm extension for source files. Use .swift instead.
    Support for .dtm will be dropped eventually.

(12/03/07)
*** Added -runid parameter that specifies the run identifier on the command
    line, rather than having it automatically generated. This must
    be unique for every invocation of a workflow and is used in several
    places to keep files from different executions cleanly separated. By
    default, a datestamp and random number are used to generate a run
    identifier. When using this parameter, care should be taken to ensure
    that the run ID remains unique with respect to all other run IDs that
    might be used, irrespective of (at least) expected run location,
    workflow or user.

(11/23/07)
*** new parameter, execution.retries to specify the number of time a job
    will be retried if it fails (giving a maximum of 1 + execution.retries
    attempts at execution)

*** Added filesystem site catalog element. Looks like 'execution' and
    allows, for example, SSH to be used for remote filesystem access.

(11/20/07)

*** Many unused fields in the sites catalog, sites.xml, are now optional.

*** Nested statement blocks are no longer supported. These saw little use
    and were buggy.

(11/01/07)

*** Concurrent mapper now generates filenames in a relatively deep directory
    hierarchy in order to reduce the number of files in each directory.
    There is a (hard-coded) parameter which determines how many files and
    subdirectories will be permitted at each level. This parameter is set